--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="home__img">    
-                    <img src="assets/img/ajinkya pic.jpg" alt="" class="ajinkya">
+                    <img src="assets/img/ajinkya pic.jpg" alt="" >
                 </div>
             </section>
 
